<resources>
    <string name="app_name">Feni computer Institute</string>
    <string name="text_1"> সরকারের বিশেষায়িত প্রতিষ্ঠান ফেনী কম্পিউটার ইন্সটিটিউটে    কম্পিউটার
অ্যান্ড টেকনােলােজি   নামের
ইঞ্জিনিয়ারিং এ এক  নতুন টেকনােলােজি রয়েছে।এই        টেকনােলােজির
       বাংলাদেশ কে     ডিজিটাল     বাংলাদেশ
গড়ার লক্ষে  কাজ  করে  যাচ্ছে।এই
টেকনােলােজি থেকে   পড়াশুনা   শেষ  করে
  অর্জনের জন্য  আমেরিকা  , চিন ,
জাপান , মালয়েসিয়া   সহ   বিভিন্ন দেশে  যাচ্ছে
 প্রতি বছর  এই   টেকনােলােজি  থেকে ২ শিফটে
প্রায় ৪৮+৪৮  (৯৬  )জন   ডিপ্লোমা  প্রকৌশলী
পড়াশুনা শেষ   করে  কর্ম ক্ষেত্রেযােগ
 ডেভেলপমেন্ট এন্ড্রয়েড এপস ডেভেলপমেন্ট ,ওয়েব ডেভেলপমেন্ট    ,
গ্রাফিক্স ডিজাইন , হার্ডওয়্যার,সহ  বিভিন্ন
বিষয়ে দক্ষতার সাথে পড়াশুনা শেষ করে  এই
টেকনােলজি থেকে  বিভিন্ন ইন্টারন্যাশনাল
কোম্পানি । যেমনঃ গুগল  ,
ফেসবুক , মাইক্রোসফট , ওরাকল , আই বি এম  ,
৭১ বাংলাদেশ লিমিটেড, ট্রিগারআই টি
বা ০ লাদেশ  লিমিট   ন সট সহ মাদ বাংলাদেশ লিমিটেড , ডাটা  সফট , সহ  আর
 কম্পানিতে চাকরি করতেছে  । </string>
    <string name="text_2"> কম্পিউটার প্রকৌশল একটি এমন একটি
ফলিতবিদ্যা যাতে তড়িৎ প্রকৌশল ও
 বিজ্ঞানের উপাদানগুলাে সু-সমন্বয়
রয়েছে । কম্পিউটার প্রকৌশলীদের সফটওয়ার
ডিজাইন ও হার্ডওয়ার-সফটওয়ার একত্রীকরণ
প্রভৃতি ক্ষেত্রেবিশেষ শিক্ষা  ও দক্ষতা  আছে ।
 প্রকৌশলী কম্পিউটিং এর
মাইক্রোপ্রসেসর , পার্সোনাল কম্পিউটার ,এবং
 ডিজাইন থেকে শুরু করে
ডিজাইন সহ বিভিন্ন ক্ষেত্রেঅবদান
। এই প্রকৌশলবিদ্যা ডিভাইস ও যন্ত্রে
বিভিন্ন এমবেডেড সিস্টেমকে (উদাহরণস্বরুপ    ,
 এমবেডেড কম্পিউটার সিস্টেম
মােটরযানের বিভিন্ন অংশ নিয়ন্ত্রনও
পর্যবেক্ষণে ব্যবহৃত হয়) ব্যবহারে  ভূমিকা ।</string>
    <string name="text_3"> কম্পিউটার প্রকৌশলীর  সাধারণ  কার্যাবলীর
রয়েছে সাধারণ ও  বিশেষ কম্পিউটারের
জন্য সফটওয়ার  তৈরি  করা , ওয়েব  সাইট  তৈরি
করা , অ্যান্ডােয়েডএপস  তৈরি  করা , এমবেডেড
মাইক্রোকন্ট্রোলারের জন্য  ফার্মওয়ার  লিখা  ,
বিভিন্ন ভিএলএসআই চিপ ডিজাইন , বিভিন্ন
এনালগ সেন্সর  ডিজাইন ,বিভিন্ন সার্কিট বাের্ড
ডিজাইন এবং অপারেটিং সিস্টেম  ডিজাইন  ।
প্রভৃতি । কম্পিউটার  প্রকৌশলীরা  রােবােটিক্স
গবেষণার জন্য  উপযুক্ত  ,যা  বিভিন্ন তড়িৎ
 যেমন মােটর   , যােগাযােগব্যবস্থা ,
সেন্সর প্রভৃতি নিয়ন্ত্রণেডিজিটাল   সিস্টেমের
 পুরােপুরি নির্ভরশীল ।</string>
    <string name="text_4"> কম্পিউটার সায়েন্স বললে অবধারিত ভাবে
প্রথমে চলে আসে প্রােগ্রামিং।প্রােগ্রামিংহলাে
কথা শুনানাের উপায় ,বােকা কম্পিউটারকে দিয়ে ইচ্ছামত কাজ করিয়ে</string>
    <string name="text_5"> এবং বড়  বড় প্রজেক্টের জন্য জাভা   জনপ্রিয়।
জাভা শেখানাের    সময়  অ্যান্ড্রয়েডেপ্রােগ্রামিং
শেখানাে হয় । যে এপস   টি আপনি    ব্যাহার
করতেছেন আটাও       জাভা  দিয়ে তৈরি  ।
অ্যালগােরিদম :
আপনি কি     জানাে  কিভাবে   বড়  একটা
ফাইলকে কমপ্রেস     করে  সাইজ   কমিয়ে  ফেলা
সম্ভব হয়? গুগল  কিভাবে   লাখ  লাখ
ওয়েবসাইট থেকে    চোখের    পলকে   দরকারি
ডাটা খুজে  আনে   ? কিভাবে  লাখ   লাখ
টেরাবাইটের ডিএনএ      সিকোয়েন্স  থেকে  খুজে
বের করা  হয় জীবনের    রহস্য ?এধরণের
প্রবলেম সলভিং    এর  হাতেখড়ি  হয়
অ্যালগােরিদম কোর্সে   ।অ্যালগােরিদম    হলাে
একটি সমস্যাকে    সমাধান   করার   বিভিন্নধাপ ।
               কোর্সে মূলত  শেখানাে  হয়
প্রবলেম সলভিং   টেকনিক   ।  সেখানে  এধরণের
       লাইফ প্রবলেম    সরাসরি   সলভ   করা
শেখাবেনা , তবে  এই  কোর্সটা  একটা   বেস  তৈরি
     , কিছু কমন    প্রবলেম সলভিং   টেকনিক </string>
    <string name="text_6"> দিবে । কম্পিউটারে     মেমরি   এবং  সময়
কম খরচ    করে   কিভাবে   সমস্যা  সমাধান    করা
     সেগুলাে শেখানাে    হয়  এখানে  । এই
কোর্সেও ল্যাব  এবং  থিওরী    দুটোই   থাকে । এই
কোর্সটা করার    সময়  আপনি     বুঝতে   পারবেন   যে
শুধু প্রােগ্রামিংল্যাংগুয়েজ জেনে   কোনাে   লাভ
নেই , সেটা ব্যবহার  সমস্যা  সমাধান   করতে
        হবে ।
ডাটা স্ট্রাকচার :
ফেসবুক কিভাবে       এত   মানুষের  তথ্য সংরক্ষণ
করে ?  এলােমেলাে    ভাবে  সংরক্ষণ    করলে
তাড়াতাড়ি খুজে        সমস্যা    , তাই  তথ্য
                  পাওয়া
সংরক্ষণ করার     নির্দিষ্টকিছুটেকনিক     আছে  ।
        লেভেল করে     কাগজপত্র     রাখলে   যেমন
       খুজে পাওয়া    যায় তেমনি   কিছু  নির্দিষ্ট
স্ট্রাকচার ফলাে  করে   ডাটা  সেভ   করলে    সহজে
সেটা কাজের     সময়  পাওয়া  যায় ।ডাটা
স্ট্রাকচার কোর্সে এগুলাে   সম্পর্কে ধারণা   দেয়া
                     এবং ডাটা   স্ট্রাকচার হলাে
কম্পিউটার সায়েন্সের    মূল  ভিত্তি,প্রতিটা
        এগুলাে কাজে      লাগে  ।</string>
    <string name="text_7"> গণিত :
কম্পিউটার সায়েন্সের     স্টুডেন্টদের ভালাে
গণিত জানার     দরকার    হয়। এটার   কারণটা
      কাছে পরিস্কার    না। নতুন   অ্যালগােরিদম
   ডাটা স্ট্রাকচার ডিজাইন     করার   সময়
এগুলাে কতটা     ভালাে  কাজ    করবে    সেটা
         করতে গণিত     দরকার    হয়।  একটা
সমস্যা অনেক     ভাবে  সমাধান   করা   যায়, কোন
পদ্ধতিটা সবথেকে     ভালাে  , কোনটা   কম
মেমরিতে কম     সময়ে  কাজ    করবে   এসব
          জন্য গণিতের    জ্ঞান খুব  দরকার   । তুমি
    ভালাে গণিত     জানবে   তােমার   প্রবলেম
সলভিং স্কিল   তত   ভালাে  হবে  ।কম্পিউটার
            এজন্য “ অ্যাপ্লাইড  ম্যাথ” ”ডিসক্রিট
     ” পড়ানাে হয়।গণিতের     অনেক    কঠিন
       সমস্যাও আজকাল        কম্পিউটার     দিয়ে
সলভ করা     হয়, এমনকি    থিওরেম    প্রমাণও  করা
হয় । গণিতের  মধ্যে জানা   লাগবে   মূলত
কম্বিনেটরিক্স , প্রােবাবিলিটি, নাম্বারথিওরি  ,
জিওমেট্রি এবং    লিনিয়ার   অ্যালজেব্রা  ইত্যাদি।
এছাড়া কিছু   ক্যালকুলাস    শেখানাে  হয়।</string>
    <string name="text_8">প্রােবাবিলিটির জন্য   আলাদা    কোর্স  করানাে   হয়
এবং খুবই   ইন্টারেস্টিং কিছু  প্রবলেম  সলভ
        হয় সেখানে   । কারাে  যদি  গণিত   ভালাে
লাগে তার   জন্য  কম্পিউটার    সায়েন্সে ভালাে
     সহজ হয়    যায়। আবার    কেও   গণিতের
রিয়েল লাইফ    অ্যাপ্লিকেশন   শিখতে   চাইলেও
এটা তার   জন্য  একটা   ভালাে   সাবজেক্ট   হতে
পারে ।
ডাটাবেস :
ওয়েবসাইট বা     বড়বড়  সফটওয়্যার    বিশাল
ডাটা রাখে   “ডাটাবেস   ” এর ভিতর   । ডাটাবেসে
কিভাবে ডাটা    রাখতে   হয়, কিভাবে   সেখান
থেকে ডাটা   নিয়ে আসতে     হয় ইত্যাদি নিয়ে  এই
কোর্স ।
আর্টিফিসিয়াল ইন্টেলিজেন্স     ( এ.আই   ):
নাম শুনেই    বােঝা  যাচ্ছে কি  নিয়ে এই  কোর্স ,
থিসিসের জন্য    খুবই  পপুলার    একটা   টপিক
এটা । কিভাবে   রােবটকে    দিয়ে কাজ    করানাে
    , গেমের  ক্যারেক্টার নিজে   নিজে   বিভিন্ন
সিদ্ধান্ত নেয়,কম্পিউটার   কিভাবে    দাবা  খেলে
এই ধরণের    দারুণ   ইন্টারেস্টিং সব  টপিক</string>
    <string name="text_9">এ.আই এর       অন্তর্ভুক্ত।ল্যাবে প্রােগ্রামিংকরে
এসব টেকনিক        ইমপ্লিমেন্টও   করতে    হয় । গেম
প্রােগ্রামিং বারােবােটিকস      এ  আগ্রহ   থাকলে
এই কোর্সটি    আপনার      খুব  পছন্দ   হবে ।নিউরাল
নেটওয়ার্ক , জেনেটিক      অ্যালগােরিদমের       মতাে
দারুণ সব    জিনিস    শিখতে    পারবেন    ।
কম্পাইলার :
সাদামাটা ভাষায়      কম্পাইলার     জিনিসটার     কাজ
প্রােগ্রামিং ল্যাংগুয়েজকে    মেশিন   ভাষায়
পরিণত করা      যাতে   হার্ডওয়্যার সেটা   বুঝতে
পারে । প্রােগ্রামিং ল্যাংগুয়েজ  কিভাবে     কাজ
করে , কিভাবে     নিজের    প্রােগ্রামিংল্যাংগুয়েজ
      করা যায়    এগুলাে   নিয়েই  কম্পাইলার
      । প্রােগ্রামিংল্যাংগুয়েজের     ইনস্ট্রাকশন
গুলাে কম্পিউটার      কিভাবে     মেশিন   কোড
         কাজ করে      সেগুলাে    শেখানাে   হয়
এখানে । মানুষের     ভাষার   মতাে   প্রােগ্রামিং
           গ্রামার থাকে  , সেগুলাে   নিয়ে  জানতে
পারবে ।</string>
    <string name="about_text1">
        ফেনী কম্পিউটার ইনস্টিটিউট বাংলাদেশের একটি কারিগরী শিক্ষা প্রতিষ্ঠান। এটি দেশের একমাত্র আইসিটি নির্ভর সরকারি পলিটেকনিক ইন্সটিটিউট। এই ইনস্টিটিউটটি ২০০৩ সালে প্রতিষ্ঠিত হয় এবং ২০০৬ সাল থেকে একাডেমিক কার্যক্রম শুরু হয়।
এটি হলো বাংলাদেশ সরকারের একমাত্র আধুনিক পলিটেকনিক ইন্সটিটিউট। প্রতিষ্ঠানটি সম্পূর্ণ রাজনীতিমুক্ত। এই প্রতিষ্ঠানে ডাটা টেলিকমিউনিকেশন ও নেটওয়ার্কিং টেকনোলজি (ডি টি এন টি), কম্পিউটার সায়েন্স এন্ড টেকনোলজি (সি এস টি) এবং টেলিকমিউনিকেশন টেকনোলজি (টি সি টি) এই তিনটি বিষয়ে ৪বছর মেয়াদী ডিপ্লোমা কোর্স পরিচালতি হচ্ছে। প্রতি বছর এই প্রতিষ্ঠান থেকে ৮-১০ জন পর্যন্ত (DUET) এ পড়ার সুযোগ পাচ্ছে। ছাত্র/ ছাত্রীদের জন্য হোস্টেলের ব্যবস্থা এবং কলেজ কেন্টিন এর রয়েছে। প্রতিষ্ঠানে ৫তলা বিশিষ্ট একাডেমিক ভবন ও প্রসাশনিক ভবন, লাইব্রেরী, সেমিনার হল, ৪তলা বিশিষ্ট মাল্টিপারপাস বিল্ডিং, ৩লা বিশিষ্ট মসজিদ, দোতলা বিশিষ্ট অধ্যক্ষের বাংলো, বঙ্গবন্ধুর মোরাল, শহীদ মিনার, লালচত্তর রয়েছে। এই প্রতিষষ্ঠানের ইন্টারনেট ব্যবহারের জন্য রয়েছে নিজস্ব বিসেট।

    </string>
    <string name="about_text2">ফেনী জেলার অভ্যন্তরে সদর উপজেলার ফেনী-ছাগলনাইয়া রোডের পাশেই নতুন রানীর হাট নামক স্থানে প্রতিষ্ঠানটি অবস্থিত। এ প্রতিষ্ঠানের পাশেই রয়েছে ফেনী জেলা কেন্দ্রীয় কারাগার। দেশের বিভিন্ন স্থান থেকে এখানে আসতে হলে প্রথমে ফেনীর মহিপালে আসতে হবে। তারপর সিএনজি অথবা ব্যাটারি চালিত যানে করে শহরের ট্র্যাঙ্করোডে আসতে হবে। তারপর সেখান থেকে সিএনজিতে করে সরাসরি অত্র প্রতিষ্ঠানে পৌঁছানো যাবে। </string>
    <string name="about_text3">তৎকালিন সরকার ফেনী জেলাতে একটি কম্পিউটার ইনস্টিটিউট স্থাপন করার পরিকল্পনা করার পর ২০০৩ সালের অক্টোবার মাসের ৬ তারিখ সাবেক প্রধানমন্ত্রী বেগম খালেদা জিয়া এটি অধিশায়িত করেন ।</string>
    <string name="text_13">  বাংলাদেশ সরকারের       বিশেষায়িত   প্রতিষ্ঠান
ফেনী কম্পিউটার     ইন্সটিটিউটে
টেলিকমিউনিকেশন টেকনােলােজি            নামের
এক নতুন    টেকনােলােজি     রয়েছে  যা
            সম্পূর্ণ নতুন।প্রতি বছর   এই
টেকনােলােজি থেকে       ২ শিফটে   প্রায়৬০ টি
      ১২০ জন     ডিপ্লোমা  প্রকৌশলী
পড়াশুনা শেষ   করে   কর্মক্ষেত্রেযােগ
দিচ্ছে।ফেনী কম্পিউটার     ইনস্টিটিউটে   মােট
       ডিপার্টমেন্টের মধ্যে
টেলিকমিনিকেশন টেকনােলােজি           অন্যতম
একটি ।   এটি  মূলত  ইলেক্ট্রনিক্সেরএকটি
     । টেলিকমিনিকেশন       টেকনােলােজি
মূলত যােগাযােগকে     সহজ    এবং   দ্রুতকরার
     উদ্ভব । টেলিকমিনিকেশন
টেকনােলােজি সারা      দেশে  ডিপ্লোমা পর্যায়ে
     ৪ জায়গায়   আছে।ফেনী     কম্পিউটার
               ২০১৬ সাল    থেকে   এটি  চালু
  । এটি   একটি   নতুন  টেকনােলজি      বিধায়</string>
    <string name="text_14">       মাঝে ভ্রান্তধারনা এই
টেকনােলজিকে নিয়ে।অনেকে       ভাবে  এই
টেকনােলজি থেকে     ডিপ্লোমা পড়ে  B.S.C  নেই
      চাকুরী নেই ।সেই   দিক  দিয়েএটি  খুবই
             । এখান   থেকে  পড়ে আমরা
          সহ পেতে   পারি  ভালাে  মানের
                          টেকনােলােজি IT
সেক্টরকে আরাে   উন্নত করছে  ।

     পড়বেন টেলিকমিউনিকেশন
                ? এখান   থেকে   পড়ে   কি
        করতে পারবেন       ?
একবিংশ শতাব্দীর    উষালগ্নে  তথ্য প্রযুক্তির
      আমাদের জীবনযাত্রায়     এক  নতুন
আলােকিত সংযােজন       । আটলান্টিক
          দিয়ে ইউরােপ  আমেরিকার     মধ্যে</string>
    <string name="text_16">টেলিকম , চায়না    মােবাইল   ,অরেঞ্জ  ,
বােডাফোন , টেলিনর      , ওয়ার্ল্ডটেল  প্রভৃতি।
এই বিষয়ের    উপর    হাতে -কলমে    জ্ঞান
          জন্য বিভিন্ন  ধরনের    ডিভাইস
প্রয়ােজন । এর   মধ্যে ওয়েবপ্রপাগেসন      ট্রেনার,
স্পেকট্রাম এনালাইজার       , ওসিলিস্কপ   ,
কমিউনিকেশন ট্রেনার      , ফাইবার    অপটিক
ট্রেনার , ডিজিটাল   সিগনাল     প্রসেসিং  ট্রেনার,
নেটওয়ার্ক ট্রেনার  সিস্টেম  , মােবাইল
                  ট্রেনার , মাইক্রোপ্রসেসর
কিট , ভিএলএসআই          ডিজাইন    কিট  , রাউটার  ,
    , টিমস   মেশিন    প্রভৃতি অন্যতম।যুগের
ধারাবাহিকতায় , পৃথিবীর     সাথে   তাল   মিলিয়ে
           বাংলাদেশও পিছিয়ে       নেই  ।
আমাদের দেশে       গড়ে  উঠেছে    বড় বড়
টেলিকমিউনিকেশন প্রতিষ্ঠান        । এর   মধ্যে
টেলিটক বাংলাদেশ       , গ্রামীন ফোন   , এয়ারটেল
           , রবি , সিটিসেল   , বাংলালিংক
ইত্যাদি কোম্পানির     পাশাপাশি    বিটিসিএল    ,
     টেলিকম , এডিএন      , মেট্রোনেট  , র্যাং
কসটেল , বাংলাদেশ       সাবমেরিন      ক্যাবল</string>
    <string name="text_17">কোম্পানি , অনিক      টেলিকম    ইত্যাদি   অন্যতম  ।
এছাড়া এদেশের      বিভিন্ন সাবকন     ও
ভেনডরদের পাশাপাশি         আইসিএক্স
icx )                 liG)
(    , আইআইজি        (    ,ডাবলইও     (EEo ),
আইএসপি ( ISP     ), বাংলালায়ন   , কিউবির
      প্রতিষ্ঠানগুলাে চলছে     সমান    তালে  ।
এদেশের মানুষের      কাছে   এই   প্রতিষ্ঠানগুলাে
গ্রহণযােগ্য অবস্থান   তৈরি   করে   নিয়েছে ।
বর্তমানে এদেশের     ছাত্র-ছাত্রীদের  কাছে   এসব
কোম্পানীতে চাকরী       করা  একটি    লক্ষ্য হয়ে
দাঁড়িয়েছে । আর   এই  স্বপ্নকে বাস্তবায়িত
        হলে টেলিকমিউনিকেশন           নিয়ে
লেখাপড়ার কোনাে       বিকল্প  নেই । আমাদের
দেশে প্রায় সব  কয়েকটি    বিশ্ববিদ্যালয়েই  এই
        গ্র্যাজুয়েশন এবং   পােষ্টগ্র্যাজুয়েশন
করার বিভাগ     রয়েছে  ।বিশেষভাবে      উল্লেখ্য,
ড্যাফোডিল ইন্টারন্যাশনাল       ইউনিভার্সিটিতে
বাংলাদেশে প্রথম     ইলেক্ট্রনিক্সএবং
টেলিকমিউনিকেশন ইঞ্জিনিয়ারিং          বিভাগ
প্রতিষ্ঠিত হয়।বর্তমানে  টেলিকমিউনিকেশন
বিভাগ থেকে     পাস   করে   ছাত্র-ছাত্রীরা দেশে </string>
</resources>