<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/teal_700"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >



                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="270dp"
                        android:src="@drawable/tct1"
                        />


                </LinearLayout>
                <LinearLayout
                    android:layout_width="410dp"
                    android:layout_height="70dp"
                    android:background="#076A61"
                    >
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="60dp"
                        android:text="Telecommunication Technology"
                        android:textStyle="bold"
                        android:textSize="28sp"
                        android:textColor="@color/white"
                        />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="15dp"
                    android:orientation="vertical"
                    >



                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="@string/text_13"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="টেলিকমিনিকেশন টেকনােলােজির  বিষয় বস্তুঃ"
                        android:textSize="20sp"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="@string/text_14"
                        android:textColor="@color/white"
                        />




                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="@string/text_14"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="18sp"
                        android:text="@string/text_16"
                        android:textColor="@color/white"
                        />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/text_17"
                        android:textColor="@color/white"
                        android:textSize="18sp" />




                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>